--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,11 @@ Werkzeug==0.9.4
 distribute==0.6.24
 gunicorn==18.0
 itsdangerous==0.23
+python-dateutil==2.2
+pytz==2013.8
+redis==2.8.0
+rq==0.3.11
+six==1.4.1
+times==0.6.2
 wsgiref==0.1.2
 zope.interface==4.0.5
