--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,16 @@ Jinja2==2.7.1
 MarkupSafe==0.18
 Twisted==13.2.0
 Werkzeug==0.9.4
+argparse==1.2.1
 distribute==0.6.24
 gunicorn==18.0
 itsdangerous==0.23
-psycopg2==2.5.1
+mwclient==0.6.5
 python-dateutil==2.2
 pytz==2013.8
 redis==2.8.0
 rq==0.3.11
+simplejson==3.3.1
 six==1.4.1
 times==0.6.2
 wsgiref==0.1.2
