--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ distribute==0.6.24
 gunicorn==18.0
 itsdangerous==0.23
 mwclient==0.6.5
+psycopg2==2.5.1
 python-dateutil==2.2
 pytz==2013.8
 redis==2.8.0
