--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 Flask==0.10.1
-Flask-Login==0.2.7
 Jinja2==2.7.1
 MarkupSafe==0.18
 Twisted==13.2.0
@@ -8,6 +7,7 @@ argparse==1.2.1
 distribute==0.6.24
 gunicorn==18.0
 itsdangerous==0.23
+lxml==3.2.4
 mwclient==0.6.5
 psycopg2==2.5.1
 python-dateutil==2.2
