--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==0.10.1
+Flask-Login==0.2.7
 Jinja2==2.7.1
 MarkupSafe==0.18
 Twisted==13.2.0
@@ -11,6 +12,7 @@ lxml==3.2.4
 mwclient==0.6.5
 psycopg2==2.5.1
 python-dateutil==2.2
+python-postmark==0.3.2
 pytz==2013.8
 redis==2.8.0
 rq==0.3.11
