--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ gunicorn==18.0
 itsdangerous==0.23
 lxml==3.2.4
 mwclient==0.6.5
+newrelic==2.4.0.4
 psycopg2==2.5.1
 python-dateutil==2.2
 python-postmark==0.3.2
